chore: Improving code as per Sonar suggestion.